[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/Ghoul/Walk.png" type="Texture" id=1]
[ext_resource path="res://assets/Ghoul/Attack.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/ghoul/Ghoul.gd" type="Script" id=3]
[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Ghoul/walk_overworld.png" type="Texture" id=5]
[ext_resource path="res://assets/Ghoul/attack_overworld.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=46]
radius = 7.0
height = 10.0

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 62, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 124, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 186, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 248, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 310, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 372, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 62, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 124, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 186, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 248, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 310, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 372, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 434, 0, 62, 33 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 496, 0, 62, 33 )

[sub_resource type="SpriteFrames" id=56]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=45]
radius = 44.2007
height = 321.64

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 156, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 312, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 468, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 624, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 156, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 5 )
region = Rect2( 312, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 5 )
region = Rect2( 468, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 5 )
region = Rect2( 624, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 5 )
region = Rect2( 780, 0, 156, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 5 )
region = Rect2( 936, 0, 156, 64 )

[sub_resource type="SpriteFrames" id=76]
animations = [ {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Ghoul" instance=ExtResource( 4 )]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 46 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 56 )
animation = "attack"

[node name="TriggerArea" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" index="0"]
position = Vector2( 0, -24 )
rotation = 1.58201
shape = SubResource( 45 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCastRight" type="RayCast2D" parent="." index="3"]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCastLeft" type="RayCast2D" parent="." index="4"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="AnimatedSpriteOverworld" parent="." index="5"]
position = Vector2( 9, 0 )
frames = SubResource( 76 )
animation = "attack"
offset = Vector2( -10, 0 )
